--- a/TestWidgets.ipynb
+++ b/TestWidgets.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6979c423f9494d5ebc13fe6925eb31ba",
+       "model_id": "044b2221138f46d6bd4e7ccf8f1d7658",
        "version_major": 2,
        "version_minor": 0
       },
@@ -27,6 +27,330 @@
     "    return x\n",
     "\n",
     "interact(f, x=10);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ab038be0dca42fd9aca122c239d8d47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='x', options=('a', 'b', 'c'), value='a'), Output()), _dom_classes=(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets.embed import embed_minimal_html, embed_snippet\n",
+    "\n",
+    "from ipywidgets import interact\n",
+    "\n",
+    "def g(x):\n",
+    "    res = x + 'z'\n",
+    "    display(res)\n",
+    "    return res\n",
+    "w = interactive(g, x=['a', 'b', 'c']);\n",
+    "\n",
+    "# embed_snippet(w)\n",
+    "\n",
+    "from IPython.display import display_html\n",
+    "display_html(w)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5985d47621c4cb6a0efc7b0e506bfee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4446b9ddbef541a49818b050f761a6f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Click Me!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fb9ecee4b8046bf95ade07687741f9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "from IPython.display import display\n",
+    "button = widgets.Button(description=\"Click Me!\")\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "display(button, output)\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    with output:\n",
+    "        print(\"Button clicked.\")\n",
+    "\n",
+    "button.on_click(on_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3f7e0bc0e864b61962eca46a7632db8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53f6c1c00c9245b0a3e81ca2f33db8c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "int_range = widgets.IntSlider()\n",
+    "output2 = widgets.Output()\n",
+    "\n",
+    "display(int_range, output2)\n",
+    "\n",
+    "def on_value_change(change):\n",
+    "    with output2:\n",
+    "        print(change['new'])\n",
+    "\n",
+    "int_range.observe(on_value_change, names='value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@out.capture(clear_output=True)\n",
+    "def function_with_captured_output():\n",
+    "    for i in range(10):\n",
+    "        print(i, 'Hello world!')\n",
+    "\n",
+    "function_with_captured_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f3c7c04b9a84cc0897c18f2d5e0b9d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px solid black'), outputs=({'output_type': 'stream', 'name': 'stdout', 'text': '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "out.append_stdout('Output appended with append_stdout')\n",
+    "out.append_display_data(YouTubeVideo('eWzY2nGfkXk'))\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact, interactive, fixed, interact_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e512817b9a2f4d0198630f57c635aefe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='x', options=('a', 'b', 'c'), value='a'), Output()), _dom_classes=(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(x=['a', 'b', 'c'])\n",
+    "def g(x):\n",
+    "    return x + 'z'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6314af217d4f4ec79e7da4282dfd6138",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='x', options=('a', 'b', 'c'), value='a'), Output()), _dom_classes=(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def g(x):\n",
+    "    return x + 'z'\n",
+    "w = interactive(g, x=['a', 'b', 'c'])\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "95921d3921964e47afd4a3420d43337b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.0, description='x', max=10.0, step=0.05), FloatSlider(value=5.0, des…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "x_widget = widgets.FloatSlider(min=0.0, max=10.0, step=0.05)\n",
+    "y_widget = widgets.FloatSlider(min=0.5, max=10.0, step=0.05, value=5.0)\n",
+    "\n",
+    "def update_x_range(*args):\n",
+    "    x_widget.max = 2.0 * y_widget.value\n",
+    "y_widget.observe(update_x_range, 'value')\n",
+    "\n",
+    "def printer(x, y):\n",
+    "    print(x, y)\n",
+    "interact(printer,x=x_widget, y=y_widget);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "957e3f0667d94a97b0dd481b77cd17da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.IntSlider()"
    ]
   }
  ],
